force-app/main/default/objects/Ad_Source__c/Ad_Source__c.object-meta.xml
<CustomObject>
    <label>Ad Source</label>
    <nameField>
        <label>Ad Source Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ad Sources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>