force-app/main/default/objects/Ad_Source__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ad Sources</relationshipLabel>
    <relationshipName>Ad_Sources</relationshipName>
    <type>Lookup</type>
</CustomField>