force-app/main/default/objects/Ad_Source__c/fields/Ad_Source__c.field-meta.xml
<CustomField>
    <fullName>Ad_Source__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ad Source</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Ad Sources (Ad Source)</relationshipLabel>
    <relationshipName>Ad_Sources1</relationshipName>
    <type>Lookup</type>
</CustomField>