force-app/main/default/objects/Ad_Source__c/fields/Audit_Active_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Audit_Active_User_Id__c</fullName>
    <label>Audit Active User Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>