force-app/main/default/objects/Ad_Source__c/fields/CallRevu_Ad_Source_GUID__c.field-meta.xml
<CustomField>
    <fullName>CallRevu_Ad_Source_GUID__c</fullName>
    <externalId>true</externalId>
    <label>CallRevu Ad Source GUID</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>