force-app/main/default/objects/Ad_Source__c/fields/CallRevu_Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>CallRevu_Tracking_Number__c</fullName>
    <label>CallRevu Tracking Number</label>
    <type>Phone</type>
</CustomField>