force-app/main/default/objects/Ad_Source__c/fields/Currently_Posted_Number__c.field-meta.xml
<CustomField>
    <fullName>Currently_Posted_Number__c</fullName>
    <label>Currently Posted Number</label>
    <type>Phone</type>
</CustomField>