force-app/main/default/objects/Ad_Source__c/fields/First_Test_Completed__c.field-meta.xml
<CustomField>
    <fullName>First_Test_Completed__c</fullName>
    <label>First Test Completed</label>
    <type>Date</type>
</CustomField>