force-app/main/default/objects/Ad_Source__c/fields/HasMethod__c.field-meta.xml
<CustomField>
    <fullName>HasMethod__c</fullName>
    <formula>IF(!isblank(text(Method__c)),1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HasMethod</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>