force-app/main/default/objects/Ad_Source__c/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <label>Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DH</fullName>
            </value>
            <value>
                <fullName>DH Local</fullName>
            </value>
            <value>
                <fullName>Resp Org</fullName>
            </value>
            <value>
                <fullName>DH Local (Dealer)</fullName>
            </value>
            <value>
                <fullName>Login Provided</fullName>
            </value>
            <value>
                <fullName>New Local</fullName>
            </value>
            <value>
                <fullName>New Local (Dealer)</fullName>
            </value>
            <value>
                <fullName>New TFN</fullName>
            </value>
            <value>
                <fullName>New TFN (Dealer)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>