force-app/main/default/objects/Ad_Source__c/fields/Number_Staging_ID__c.field-meta.xml
<CustomField>
    <fullName>Number_Staging_ID__c</fullName>
    <externalId>true</externalId>
    <label>Number Staging ID</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>