force-app/main/default/objects/Ad_Source__c/fields/Posted_Number_Provided_By__c.field-meta.xml
<CustomField>
    <fullName>Posted_Number_Provided_By__c</fullName>
    <label>Posted Number Provided By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Auto.com</fullName>
            </value>
            <value>
                <fullName>Autobytel</fullName>
            </value>
            <value>
                <fullName>Auto One</fullName>
            </value>
            <value>
                <fullName>AutoTrader</fullName>
            </value>
            <value>
                <fullName>CallBright</fullName>
            </value>
            <value>
                <fullName>CallMeasurement</fullName>
            </value>
            <value>
                <fullName>CallSource</fullName>
            </value>
            <value>
                <fullName>Carfax</fullName>
            </value>
            <value>
                <fullName>CarGurus</fullName>
            </value>
            <value>
                <fullName>Cars.com</fullName>
            </value>
            <value>
                <fullName>CarsforSale</fullName>
            </value>
            <value>
                <fullName>CDK</fullName>
            </value>
            <value>
                <fullName>Cobalt</fullName>
            </value>
            <value>
                <fullName>Dealer.com</fullName>
            </value>
            <value>
                <fullName>Dealer.com SNE</fullName>
            </value>
            <value>
                <fullName>Dealer eProcess</fullName>
            </value>
            <value>
                <fullName>Dealer Inspire</fullName>
            </value>
            <value>
                <fullName>DealerOn</fullName>
            </value>
            <value>
                <fullName>DealerRater</fullName>
            </value>
            <value>
                <fullName>DealerSocket/DealerFire</fullName>
            </value>
            <value>
                <fullName>Dominion</fullName>
            </value>
            <value>
                <fullName>Edmunds</fullName>
            </value>
            <value>
                <fullName>Ford Direct</fullName>
            </value>
            <value>
                <fullName>FZ Automotive</fullName>
            </value>
            <value>
                <fullName>KBB</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Search Optics</fullName>
            </value>
            <value>
                <fullName>TrueCar</fullName>
            </value>
            <value>
                <fullName>VinSolutions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>