force-app/main/default/objects/Ad_Source__c/fields/Reroute_RespOrg_Completed__c.field-meta.xml
<CustomField>
    <fullName>Reroute_RespOrg_Completed__c</fullName>
    <label>Reroute/RespOrg Completed</label>
    <type>Date</type>
</CustomField>