force-app/main/default/objects/Ad_Source__c/fields/Reroute_RespOrg_Request__c.field-meta.xml
<CustomField>
    <fullName>Reroute_RespOrg_Request__c</fullName>
    <label>Reroute/RespOrg Request</label>
    <type>Date</type>
</CustomField>