force-app/main/default/objects/Ad_Source__c/fields/Rings_to__c.field-meta.xml
<CustomField>
    <fullName>Rings_to__c</fullName>
    <label>Rings-to</label>
    <type>Phone</type>
</CustomField>