force-app/main/default/objects/Ad_Source__c/fields/Service_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Service_Agreement__c</fullName>
    <label>Service Agreement</label>
    <referenceTo>Service_Agreement__c</referenceTo>
    <relationshipLabel>Ad Sources</relationshipLabel>
    <relationshipName>Ad_Sources</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>