force-app/main/default/objects/Ad_Source__c/fields/Update_In_360__c.field-meta.xml
<CustomField>
    <fullName>Update_In_360__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update In 360</label>
    <type>Checkbox</type>
</CustomField>