force-app/main/default/objects/Ad_Source__c/fields/X1__c.field-meta.xml
<CustomField>
    <fullName>X1__c</fullName>
    <formula>casesafeid(Service_Agreement__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>18 Character Service Agreement ID</label>
    <type>Text</type>
</CustomField>